[gd_scene load_steps=3 format=3 uid="uid://c8yam2n3o4p5q"]

[ext_resource type="Script" path="res://scenes/ui/maps.gd" id="MapsScript"]

[sub_resource type="StyleBoxFlat" id="ButtonStyle"]
bg_color = Color(0.3, 0.3, 0.3, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 36

[node name="Maps" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("MapsScript")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SELECT MAP"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
modulate = Color(0.5, 0.5, 0.5, 1)

[node name="Map1Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("ButtonStyle")
text = "Map 1 - The Arena"

[node name="Map2Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("ButtonStyle")
text = "Map 2 - The Fortress"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
modulate = Color(0.5, 0.5, 0.5, 1)

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("ButtonStyle")
text = "Back to Main Menu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
